--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
   "dependencies": {
-    "@angular/common": "^2.0.0-rc.4",
-    "@angular/compiler": "^2.0.0-rc.4",
-    "@angular/core": "^2.0.0-rc.4",
-    "@angular/forms": "^0.2.0",
-    "@angular/http": "^2.0.0-rc.4",
-    "@angular/platform-browser": "^2.0.0-rc.4",
-    "@angular/platform-browser-dynamic": "^2.0.0-rc.4",
-    "es6-shim": "^0.35.0",
-    "firebase": "^3.3.0",
-    "ionic-angular": "^2.0.0-beta.11",
-    "ionic-native": "1.3.17",
+    "@angular/common": "2.0.0-rc.4",
+    "@angular/compiler": "2.0.0-rc.4",
+    "@angular/core": "2.0.0-rc.4",
+    "@angular/forms": "0.2.0",
+    "@angular/http": "2.0.0-rc.4",
+    "@angular/platform-browser": "2.0.0-rc.4",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
+    "@angular/router": "^2.0.0-rc.2",
+    "es6-shim": "0.35.0",
+    "ionic-angular": "2.0.0-beta.11",
+    "ionic-native": "^1.3.17",
     "ionicons": "3.0.0",
-    "reflect-metadata": "^0.1.3",
-    "rxjs": "^5.0.0-beta.6",
-    "typings": "^1.3.2",
-    "zone.js": "^0.6.12"
+    "reflect-metadata": "0.1.3",
+    "rxjs": "5.0.0-beta.6",
+    "zone.js": "0.6.12",
+    "firebase": "^3.3.0",
+    "typings": "^1.3.2"
   },
   "devDependencies": {
-    "del": "2.2.2",
+    "del": "2.2.0",
     "gulp": "3.9.1",
+    "gulp-tslint": "^5.0.0",
     "gulp-watch": "4.3.9",
     "ionic-gulp-browserify-typescript": "2.0.0",
     "ionic-gulp-fonts-copy": "^1.0.0",
@@ -27,8 +29,9 @@
     "ionic-gulp-sass-build": "^1.0.0",
     "ionic-gulp-scripts-copy": "^2.0.0",
     "ionic-gulp-tslint": "^1.0.0",
-    "tslint-ionic-rules": "^0.0.5",
-    "run-sequence": "1.2.2"
+    "run-sequence": "1.2.2",
+    "tslint": "^3.10.1",
+    "tslint-ionic-rules": "0.0.4"
   },
   "cordovaPlugins": [
     "cordova-plugin-device",
